--- a/Stress_detection.ipynb
+++ b/Stress_detection.ipynb
@@ -2,20 +2,113 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "data = pd.read_csv(\"preprocessedNP.csv\")\n",
+    "data = pd.read_csv(\"./Processed Data/preprocessedNP.csv\")\n",
     "# print(data.head())\n",
-    "data.columns = ['text', 'label']"
+    "data.columns = ['useless','text', 'label']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>useless</th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3570</td>\n",
+       "      <td>retreated</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>355</td>\n",
+       "      <td>bleak</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2041</td>\n",
+       "      <td>hissed</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1219</td>\n",
+       "      <td>0 motivation to study unhappy</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1155</td>\n",
+       "      <td>I MISSED YOU A WHOLE LOT unhappy</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   useless                                text  label\n",
+       "0     3570                           retreated      1\n",
+       "1      355                               bleak      1\n",
+       "2     2041                              hissed      1\n",
+       "3     1219     0 motivation to study unhappy        1\n",
+       "4     1155  I MISSED YOU A WHOLE LOT unhappy        1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.drop('useless',axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -46,63 +139,93 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Thank you happy.1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>retreated</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>That would be a great trick happy.3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>bleak</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>unhappy  every time laughing my ass off</td>\n",
+       "      <td>hissed</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>have a blast okay. love you!</td>\n",
+       "      <td>0 motivation to study unhappy</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Enjoy happy</td>\n",
+       "      <td>I MISSED YOU A WHOLE LOT unhappy</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9085</th>\n",
+       "      <td>poise</td>\n",
        "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9086</th>\n",
+       "      <td>until they put a password on their Wi-Fi :)KI...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9087</th>\n",
+       "      <td>erratic</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9088</th>\n",
+       "      <td>lunaticism</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9089</th>\n",
+       "      <td>watchman comes and threatens me</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>9090 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      text  label\n",
-       "0                        Thank you happy.1      0\n",
-       "1      That would be a great trick happy.3      0\n",
-       "2  unhappy  every time laughing my ass off      1\n",
-       "3             have a blast okay. love you!      1\n",
-       "4                              Enjoy happy      0"
+       "                                                   text  label\n",
+       "0                                             retreated      1\n",
+       "1                                                 bleak      1\n",
+       "2                                                hissed      1\n",
+       "3                       0 motivation to study unhappy        1\n",
+       "4                    I MISSED YOU A WHOLE LOT unhappy        1\n",
+       "...                                                 ...    ...\n",
+       "9085                                              poise      0\n",
+       "9086   until they put a password on their Wi-Fi :)KI...      0\n",
+       "9087                                            erratic      1\n",
+       "9088                                         lunaticism      1\n",
+       "9089                    watchman comes and threatens me      1\n",
+       "\n",
+       "[9090 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()"
+    "data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(data.isnull().sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -142,19 +265,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                            text      label\n",
-      "0                         thank   No Stress\n",
-      "1             would great trick   No Stress\n",
-      "2  unhappi  everi time laugh ass     Stress\n",
-      "3                blast okay love     Stress\n",
-      "4                    enjoy happi  No Stress\n"
+      "                       text   label\n",
+      "0                   retreat  Stress\n",
+      "1                     bleak  Stress\n",
+      "2                      hiss  Stress\n",
+      "3     motiv studi unhappi    Stress\n",
+      "4  miss whole lot unhappi    Stress\n"
      ]
     }
    ],
@@ -166,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +318,7 @@
        "BernoulliNB()"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,14 +334,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['No Stress']\n"
+      "['Stress']\n"
      ]
     }
    ],
@@ -231,16 +354,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "90.26315789473685"
+       "74.73333333333333"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -260,12 +383,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "   No Stress       0.91      0.91      0.91       423\n",
-      "      Stress       0.89      0.89      0.89       337\n",
+      "   No Stress       0.91      0.31      0.47      1058\n",
+      "      Stress       0.72      0.98      0.83      1942\n",
       "\n",
-      "    accuracy                           0.90       760\n",
-      "   macro avg       0.90      0.90      0.90       760\n",
-      "weighted avg       0.90      0.90      0.90       760\n",
+      "    accuracy                           0.75      3000\n",
+      "   macro avg       0.82      0.65      0.65      3000\n",
+      "weighted avg       0.79      0.75      0.71      3000\n",
       "\n"
      ]
     }
